--- a/index.html
+++ b/index.html
@@ -1,33 +1,165 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Time Capsule Project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <h1> Where Are We Together Now? </h1>
+<head>
+  <title>Time Capsule Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <div class="scrollmenu">
-      <a href="#home">Explore</a>
-      <a href="#news">Read</a>
-      <a href="#contact">Consider</a>
+  <h1> WHERE ARE WE TOGETHER NOW? </h1>
+
+  <div class="scrollmenu">
+    <marquee class="scrollmessage" behavior="scroll" direction="left" scrollamount="25">EXPLORE READ CONSIDER</marquee>
+  </div>
+
+  <h2>Welcome to the Past, 2029 Users!</h2>
+
+  <!-- this is the crazy carousel. just making a note to section it off from the other things. it is fairly simple when you look at the code, it is just link images and a bunch of divs that are named to help make it function. There is also text to ber used as a -->
+
+<div class="contain">
+
+  <div class="row">
+    <div class="row__inner">
+
+      <a href="../time_cap_final/story01.html">
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="stories/story01/louis01.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            LOUIS CK & ME TOO
+          </div>
+        </div>
+      </div>
+    </a>
+
+      <a href="../time_cap_final/story02.html">
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="stories/story02/thepic.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            SENATOR AL FRANKEN
+          </div>
+        </div>
+      </div>
+      </a>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-3.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-4.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-5.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-6.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-7.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-8.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-9.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            Top Gear
+          </div>
+        </div>
+      </div>
+
+      <div class="tile">
+        <div class="tile__media">
+          <img class="tile__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/70390/show-10.jpg" alt=""  />
+        </div>
+        <div class="tile__details">
+          <div class="tile__title">
+            HEADLINE
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
+  </div>
 
-    <h2>Welcome to the Past, 2029 Users!</h2>
-    <link rel="stylesheet" href="style.css">
-  </head>
+</div>
 
-  <body>
+  <!-- this is the crazy carousel. just making a note to section it off from the other things-->
 
-    <form>
-      <input class="MyButton" type="button" value="About" onclick="window.location.href='../TimeCapsule/about.html'" />
-    </form>
-    <form>
-      <input class="MyButton" type="button" value="Read More" onclick="window.location.href='../TimeCapsule/readMore.html'" />
-    </form>
-    <footer>
-    <p>John * Esmeralda * Shaun * Aninha * Keeshawn
-    <br>wanted to share a 2019 conversation
-    <br>with you</p>
+  <link rel="stylesheet" href="style.css">
+</head>
+<br>
+
+<body>
+
+  <form>
+    <input class="MyButton" type="button" value="ABOUT" onclick="window.location.href='../time_cap_final/about.html'" />
+  </form>
+  <form action="https://www.google.com/search?ei=7WmtXJ7FDoaf_QaN4IbgAw&q=call+out+culture&oq=call&gs_l=psy-ab.1.0.35i39l2j0i67l8.17510.20264..21541...1.0..0.109.397.2j2....2..0....1..gws-wiz.....6..0i71j0i131j0j0i131i67.OYrMbLbtMfo">
+    <input class="MyButton" type="button" value="READ MORE" />
+  </form>
+  <footer>
+    <br>
+    <p>JOHN * ESMERALDA * SHAUN * ANINHA * KEESHAWN
+      <br>WANTED TO SHARE A <em>2019</em> CONVERSATION
+      <br>WITH YOU</p>
   </footer>
 </body>
 
