--- a/about.html
+++ b/about.html
@@ -4,23 +4,21 @@
     <title>Time Capsule Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <h1> Where Are We Together Now? </h1>
+    <h1> WHERE ARE WE TOGETHER NOW? </h1>
 
     <div class="scrollmenu">
-      <a href="#home">Explore</a>
-      <a href="#news">Read</a>
-      <a href="#contact">Consider</a>
+      <marquee class="scrollmessage" behavior="scroll" direction="left" scrollamount="25">EXPLORE READ CONSIDER</marquee>
     </div>
 
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body text="white">
-    <h1><br>About</h1>
-    <div class = "about"><br>In the beginning of an era, an era of hyperconnectivity
+    <h1><br>ABOUT</h1>
+    <div class = "about"><br>In the beginning of an era hyperconnectivity,
       <br>through platforms like Twitter, Facebook, Snapchat,
       <br>and more, we began to talk more. Introduced was the
-      <br>concept of Call-Out Culture or Cancel Culture.
+      <br>concept of <em>Call-Out Culture</em> or <em>Cancel Culture</em>.
       <br>We began holding our peers more accountable and paid
       <br>closer attention to eachother. Good? Bad? We’re not
       <br>sure, but we believe you may have a better idea
@@ -28,17 +26,23 @@
       <br>for your participation and consideration.
       <br><br>
     </div>
-    <!-- <div class="opening">The Purpose of this time capsule is to give a collection on important events that revoled around the call-out/outrage/cancel culture that appeared throughout 2015-2019 for viewers, thats you 2029 guys, to read, think, and form your own opinions of these events. Call out culture as defined by wikipeadia is "is the social phenomenon of publicly denouncing perceived racism, sexism, homophobia, transphobia, classism, national interest, and other forms of bigotry. Denunciation   can happen in person or online." It is important to note that the vast majority of people during this time have access to internet and therefore even things said in person usually end up online.</div>
-    <br>
-    <p class="opening">Without further ado click the button below to open the time capsule at the appropriate time.</p> -->
+
+      <br>
+      <br>
+
     <form>
-      <input class="MyButton" type="button" value="Go Back" onclick="window.location.href='../TimeCapsule/index.html'" />
+      <input class="MyButton" type="button" value="GO BACK" onclick="window.location.href='../time_cap_final/index.html'" />
     </form>
+
+      <br>
+      <br>
+
     <footer>
-    <p>John * Esmeralda * Shaun * Aninha * Keeshawn
-    <br>wanted to share a 2019 conversation
-    <br>with you</p>
+    <p>JOHN * ESMERALDA * SHAUN * ANINHA * KEESHAWN
+    <br>WANTED TO SHARE A <em>2019</em> CONVERSATION
+    <br>WITH YOU</p>
   </footer>
+
   </body>
 
 </html>
